--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,11 @@ spring:
     password: root
   jpa:
     hibernate:
-      ddl-auto: create
-    show-sql: true
+      ddl-auto: update
 
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
 
