definindo bd local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,7 @@
 #        SQL: debug
 #
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/barbearia
-spring.datasource.username=postgres
-spring.datasource.password=12345
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
