--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/barber
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 
